<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    tools:context=".MainActivity">

    <TableRow>

        <TextView
            android:id="@+id/textView4"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ScoreKeepingApp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textView3"
            style="@style/TextView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Score" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textView"
            style="@style/TextView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TeamA" />

        <Button
            android:id="@+id/button"
            style="@style/TextView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Plus" />

        <Button
            android:id="@+id/button2"
            style="@style/TextView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Minus" />
    </TableRow>

    <TableRow android:layout_height="200dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TeamB" />

        <Button
            android:id="@+id/button3"
            style="@style/TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plus1" />

        <Button
            android:id="@+id/button4"
            style="@style/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Minus1" />
    </TableRow>

    <TableRow>

        <RadioGroup
            android:id="@+id/roundingRadioGroup"
            style="@style/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/noRoundingRadioButton"
                style="@style/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/RadioButton1" />

            <RadioButton
                android:id="@+id/noRoundingRadioButton5"
                style="@style/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton2" />

            <RadioButton
                android:id="@+id/noRoundingRadioButton10"
                style="@style/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton3" />

        </RadioGroup>
    </TableRow>

</TableLayout>